[project]
name = "openapi"
version = "0.1.0"
description = "OpenAPI REST interface for the dbframe PostgreSQL database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.42.0",
]

[project.scripts]
serve = "uvicorn main:app --reload"
